--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "start-backend": "python app.py",
     "start-frontend": "npm run dev",
-    "start-all": "concurrently "npm run start-backend" "npm run start-frontend""
+    "start-all": "concurrently \"npm run start-backend\" \"npm run start-frontend\""
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
