--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start-backend": "python app.py",
-    "start-frontend": "npm run dev",
-    "start-all": "./start.sh"
+    "start-frontend-build": "npm run build"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -62,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
