--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0"
+    "vaul": "^0.9.0",
+    "@tanstack/react-query": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
