--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "@tanstack/react-query": "^4.0.0"
+    "@tanstack/react-query": "^4.0.0",
+    "framer-motion": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
