--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc21",
+    "framer-motion": "^10.0.0",
     "input-otp": "^1.0.1",
     "lucide-react": "^0.323.0",
     "next-themes": "^0.2.1",
@@ -52,9 +54,7 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0",
-    "@tanstack/react-query": "^4.0.0",
-    "framer-motion": "^10.0.0"
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
